# PCB-inspect

./: .env.example  .gitignore  README.md  accessibility-audit.md  docker-compose.yml  issues-phase1.md  known-issues.md  pcb-inspect-product-requirements-document.md  production-readiness-audit.md
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f6e59ce8b17_initial_schema.py  26bfb31bdbe9_add_dataset_export_table.py  45e32f1c8b8f_add_user_lockout_and_soft_delete_fields.py  75a0904387fd_add_analysis_review_board_disposition_.py  93a85fbf998e_make_inspection_image_dimensions_nullable.py  af998a29810a_add_quality_alert_table.py  bcf4b2e3cd9f_add_model_version_evaluation_status.py  d99f90ad103b_add_report_table.py  fb90cc29a723_add_chat_session_and_chat_message_tables.py
backend/app/: main.py
backend/app/agents/: analyst.py  chain.py  errors.py  llm_client.py  policy.py  reviewer.py  schemas.py  summarizer.py
backend/app/alerts/: router.py  schemas.py  service.py
backend/app/analyses/: router.py  schemas.py  service.py
backend/app/audit/: router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/chat/: agent.py  errors.py  prompts.py  router.py  schemas.py  service.py  tools.py
backend/app/core/: config.py  crypto.py  errors.py  health.py  security.py
backend/app/datasets/: exporter.py  filters.py  router.py  schemas.py  service.py
backend/app/db/: base.py  seed.py  session.py
backend/app/detections/: router.py  schemas.py  service.py
backend/app/events/: publisher.py  sse.py
backend/app/inference/: annotate.py  detect.py  golden_set.py  model.py  service.py  status.py
backend/app/ingestion/: naming.py  router.py  schemas.py  service.py  validation.py  watcher.py
backend/app/inspections/: filters.py  router.py  schemas.py  service.py  state.py
backend/app/knowledge/: defects.py
backend/app/models/: __init__.py  analysis.py  analysis_review.py  audit_log.py  batch.py  board.py  board_disposition.py  (+11 more)
backend/tests/: conftest.py  test_agent_analysis_pipeline.py  test_agents_chain.py  test_agents_policy.py  test_alert_monitoring.py  test_alerts.py  test_analyses.py  test_analysis_review.py  test_audit_log.py  test_auth.py  test_board_disposition.py  test_celery_routing.py  test_chat_agent.py  test_chat_messages_endpoint.py  test_chat_sessions.py  test_chat_tools.py  test_dataset_export_generation.py  test_dataset_exports.py  test_db_constraints.py  test_detection_feedback.py  test_events.py  test_golden_set.py  test_health.py  test_inference.py  test_ingestion.py  test_inspections_agent_analysis.py  test_inspections_detail.py  test_inspections_list.py  test_inspections_state.py  test_knowledge.py  test_llm_client_chat.py  test_manual_annotation.py  test_model_evaluation_task.py  test_model_versions.py  test_openapi.py  test_pipeline_tasks.py  test_report_generation.py  test_reports.py  test_retention_purge.py  test_settings.py  (+2 more)
launcher/core/: Cargo.toml
launcher/src-tauri/: Cargo.toml  tauri.conf.json
(+112 files in other folders)
