[package]
name = "pcb-launcher-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend orchestration logic for the PCB-Inspect native launcher (FR-20): docker runtime detection, docker compose lifecycle, and /health polling. No GUI dependencies, so it builds and tests without a display or system webview libraries."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# No TLS feature: the launcher only ever talks to 127.0.0.1 over plain HTTP (PRD section
# 13 — every service is localhost-only), so pulling in rustls/native-tls would just be dead
# weight (and a slower, C-toolchain-dependent build for no benefit).
ureq = { version = "2", default-features = false }
