[package]
name = "pcb-inspect-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native launcher for PCB-Inspect (FR-20): starts the Docker Compose stack, waits for /health, and opens the dashboard in its own window — no terminal, no browser chrome."

[lib]
name = "pcb_inspect_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pcb-inspect-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcb-launcher-core = { path = "../core" }
